overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@
 
 /* Contents */
 .contents {
+	box-sizing: border-box;
 	position: sticky;
 	top: 1em;
 	overflow: auto;
@@ -142,7 +143,7 @@
 	max-width: 100%;
 	height: 100vh;
 	padding-left: 1.5em;
-	padding-right: 0.1em;
+	padding-bottom: 1em;
 	grid-column: 4 / 5;
 	grid-row: 2 / 3;
 	justify-self: left;
